<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/first_name_input"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/last_name_input"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/firstNameInput"
        app:layout_constraintStart_toStartOf="@+id/firstNameInput"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_address_input"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/lastNameInput"
        app:layout_constraintStart_toStartOf="@+id/lastNameInput"
        app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:onClick="registerUser"
        android:text="@string/register_btn"
        app:layout_constraintEnd_toEndOf="@+id/emailInput"
        app:layout_constraintStart_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <TextView
        android:id="@+id/firstNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:text="@string/first_name_view"
        app:layout_constraintEnd_toEndOf="@+id/register_btn"
        app:layout_constraintStart_toStartOf="@+id/register_btn"
        app:layout_constraintTop_toBottomOf="@+id/register_btn" />

    <TextView
        android:id="@+id/lastNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/last_name_view"
        app:layout_constraintEnd_toEndOf="@+id/firstNameView"
        app:layout_constraintStart_toStartOf="@+id/firstNameView"
        app:layout_constraintTop_toBottomOf="@+id/firstNameView" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="25dp"
        android:text="@string/email_view"
        app:layout_constraintEnd_toEndOf="@+id/lastNameView"
        app:layout_constraintStart_toStartOf="@+id/lastNameView"
        app:layout_constraintTop_toBottomOf="@+id/lastNameView" />


</androidx.constraintlayout.widget.ConstraintLayout>